# airport-forecasting

./: .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/processed/: pax_enriched.csv  pax_enriched.parquet
data/raw/: flight_movements.parquet
models/: lightgbm_global.pkl  lightgbm_growth.pkl
reports/: best_params.json  champion_by_airport.csv  cv_results.csv  drift_report.csv  feature_importance.csv  growth_vs_level.csv  horizon_results.csv  model_results.csv  prediction_intervals.csv  recursive_results.csv
scripts/: auto_retrain.py  compare_recursive.py  download_eurostat.py  download_macro.py  download_macro_v2.py  eda.py  eda_advanced.py  eda_full.py  evaluate_horizons.py  process_eurostat.py  train_all_models.py  train_chronos.py  train_growth.py  tune_lightgbm.py
src/airport_forecast/: api.py  constants.py  dashboard.py  data.py  features.py  holidays_features.py  logging_config.py  mlflow_tracking.py  models.py  monitoring.py
tests/: test_data.py  test_features.py  test_models.py  test_monitoring.py
