[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airport-forecast"
version = "0.1.0"
description = "Airport PAX forecasting on VINCI Airports network — multi-model ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "eurostat>=1.0",
    "holidays>=0.40",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
models = ["prophet>=1.1", "statsmodels>=0.14"]
mlops = ["mlflow>=2.10"]
serving = ["fastapi>=0.110", "uvicorn>=0.27"]
dashboard = ["streamlit>=1.30"]
all = ["airport-forecast[dev,models,mlops,serving,dashboard]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]
"notebooks/**" = ["E402"]
